--- a/task3_4_5/css/styles.css
+++ b/task3_4_5/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    margin-top: 91px;
     font-family: 'Muli', sans-serif;
     font-size: 14px;
     line-height: 1.5;
@@ -41,13 +42,20 @@ a {
 /*************************************************************/
 header {
     margin-bottom: 20px;
+    position: fixed;
+    top:0;
+    left:0;
+    right: 0;
+    z-index: 2;
+    background-color: white;
+
 }
 
 .header-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+
 
 }
 
@@ -57,6 +65,7 @@ header {
     font-family: 'Radley', serif;
     text-transform: uppercase;
     color: #19121e;
+
 }
 
 .user-name {
@@ -126,16 +135,16 @@ header {
 /* BODY                                                      */
 /*************************************************************/
 
-.main-item {
+.post {
     width: 50%;
     padding: 10px;
 }
 
-.main-item a {
+.post a {
     display: block;
 }
 
-.main-item img {
+.post img {
     display: block;
     width: 100%;
     transition: .5s ease-in-out;
@@ -263,7 +272,7 @@ li.show {
         display: flex;
     }
 
-    .main-item {
+    .post {
         width: 50%;
     }
 
@@ -271,7 +280,7 @@ li.show {
 }
 
 @media (min-width: 100px) {
-    .main-item {
+    .post {
         width: 50%;
     }
 
